<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">IShuYing</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_movies_fragment">Hello Movies fragment</string>
    <string name="hello_books_fragment">Hello Books fragment</string>

    <string name="tab_movies_fragment">Movie</string>
    <string name="tab_books_fragment">Book</string>
    <string name="hot_movies">Hot Movies</string>

    <string name="string_no_note">No Rating</string>

    <string name="movie_info">影片信息</string>
    <string name="movie_description">简介</string>
    <string name="movie_directors">导演：</string>
    <string name="movie_casts">主演：</string>
    <string name="movie_aka">又名：</string>
    <string name="movie_year">上映：</string>
    <string name="movie_genres">类型：</string>
    <string name="movie_during">片长：</string>
    <string name="movie_countries">地区：</string>
    <string name="movie_languages">语言：</string>
    <string name="movie_imdb">IMDb：</string>
    <string name="movie_not_find">无法获取</string>

    <string name="no_books">No Books Data</string>
    <string name="prefix_subtitle">副标题: %1$s</string>
    <string name="prefix_author">作者: %1$s</string>
    <string name="prefix_pubdata">出版日期: %1$s</string>
    <string name="prefix_pages">页数: %1$s</string>
    <string name="prefix_price">定价: %1$s</string>

    <string name="book_content_desc">内容简介</string>
    <string name="book_author_desc">作者简介</string>
    <string name="book_catalog">目录</string>

    <string name="content_no_loadmore">No more content...</string>
    <string name="no_movies">No Movie Data</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_movies">Movie</string>
    <string name="navigation_book">Book</string>
    <string name="navigation_blog">Blog</string>
    <string name="navigation_about">AboutMe</string>
    <string name="navigation_login">Login</string>
    <string name="navigation_logout">Logout</string>

    <string name="no_blog">No Blog</string>

    <string name="about_me">App Demo参看github： \nhttps://github.com/tancolo/IDouban \n\n简书博客：\nhttp://www.jianshu.com/users/d614825bc8a1/latest_articles</string>
    <string name="author_name">大鱼</string>

    <string name="menu_share_title">share</string>

    <string name="label_login_tips">What your see is what you get</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_logout_text">Logout</string>
    <string name="view_login_title_tip">You can see more</string>

    <string name="view_login_weibo">Weibo</string>
    <string name="view_login_wechat">Wechat</string>
    <string name="view_login_qq">QQ</string>

    <string name="view_login_profile_name">Your name</string>

    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>

    <string name="view_set_logout_success">您已成功退出!</string>
    <string name="view_set_login_success">您已成功登录!</string>

    <string name="toast_login_error_network">授权出现问题，再试一次吧!</string>

    <string name="fab_aware_scrolling_view_behavior" translatable="false">com.shrimpcolo.johnnytam.ishuying.ui.behavior.FABAwareScrollingViewBehavior</string>
    <string name="fab_tips">亲，FAB做什么您说了算！</string>

</resources>
